syntax = "proto3";
package exploit_manager;

option go_package = "exploit_manager";

import "fileserver/api.proto";

import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";

message TeamBucket {
  map<string, string> teams = 1;
}

message ExploitConfiguration {
  string entrypoint = 1;
  bool is_archive = 2;
  google.protobuf.Duration run_every = 3;
  google.protobuf.Duration timeout = 4;
}

message ExploitState {
  string exploit_id = 1;
  int64 version = 2;
  fileserver.FileInfo file = 3;
  bool disabled = 4;
  bool endless = 5;
  ExploitConfiguration config = 6;
}

message Config {
  string farm_url = 1;
  string farm_password = 2;
  string flag_regexp = 3;
  google.protobuf.Duration ping_every = 4;
  google.protobuf.Duration submit_every = 5;
  repeated string environ = 6;
}

message ServerState {
  // Ping distribution by client
  map<string, TeamBucket> client_team_map = 1;
  repeated ExploitState exploits = 2;
  Config config = 3;
}

message PingRequest {
  message ServerInfo {
    string client_id = 1;
  }

  message Heartbeat {
    string client_id = 1;
    int32 weight = 2;
  }

  message Leave {
    string client_id = 1;
  }

  oneof payload {
    ServerInfo server_info_request = 1;
    Heartbeat heartbeat_request = 2;
    Leave leave_request = 3;
  }
}

message PingResponse {
  ServerState state = 1;
}

message ExploitRequest {
  string exploit_id = 1;
}

message ExploitResponse {
  ExploitState state = 1;
}

message UpdateExploitRequest {
  ExploitState state = 1;
}

message UpdateExploitResponse {
  ExploitState state = 1;
}

message SingleRunRequest {
  string exploit_id = 1;
}

message Command {
  string command = 1;
}

service Service {
  rpc Ping (PingRequest) returns (PingResponse) {}

  rpc Exploit(ExploitRequest)  returns (ExploitResponse) {}
  rpc UpdateExploit(UpdateExploitRequest) returns (UpdateExploitResponse) {}

  rpc BroadcastCommand(Command) returns (google.protobuf.Empty) {}
  rpc BroadcastRequests(google.protobuf.Empty) returns (stream Command) {}

  rpc SingleRun(SingleRunRequest) returns (google.protobuf.Empty) {}
  rpc SingleRunRequests(google.protobuf.Empty) returns (stream SingleRunRequest) {}
}
